<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_category"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        tools:context="com.chenhaowang.myappcollection.CategoryActivity">

        <TextView
            style="@style/title_style"
            android:gravity="center_horizontal"
            android:text="@string/title_name" />

        <Button
            android:id="@+id/app_movie_button"
            style="@style/category_style"
            android:text="@string/app_movie" />

        <Button
            android:id="@+id/app_stock_button"
            style="@style/category_style"
            android:text="@string/app_stock" />

        <Button
            android:id="@+id/app_reader_button"
            style="@style/category_style"
            android:text="@string/app_reader" />

        <Button
            android:id="@+id/app_news_button"
            style="@style/category_style"
            android:text="@string/app_news" />

        <Button
            android:id="@+id/app_final_button"
            style="@style/category_style"
            android:text="@string/app_final" />
    </LinearLayout>
</ScrollView>